fix type in .avatar.distorted

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,9 +1,9 @@
 .avatar.proportioned {
-    width: 300px;
     height: auto;
+    width: 300px;
 }
 
-.avatar.distored {
-    width: 200px;
+.avatar.distorted {
     height: 400px;
+    width: 200px;
 }
